--- a/MonsterBattle/MonsterBattle/Properties/Resources.resx
+++ b/MonsterBattle/MonsterBattle/Properties/Resources.resx
@@ -229,4 +229,7 @@
   <data name="voltorb_sprite" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\voltorb sprite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="switch_interface" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\switch_interface.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
