--- a/MonsterBattle/MonsterBattle/Properties/Resources.resx
+++ b/MonsterBattle/MonsterBattle/Properties/Resources.resx
@@ -250,4 +250,10 @@
   <data name="teckle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\teckle.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="katansworddance" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\katansworddance.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tackle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tackle.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
